# hookmaster-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  githooks.toml.example  rustfmt.toml
.github/workflows/: README.md  ci.yml  release.yml
src/: commit_msg.rs  config.rs  git_hooks.rs  hook_manager.rs  main.rs
