[package]
name = "hookmaster-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Some nice git hooks for your pleasure - Rust implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/hookmaster-rs"
keywords = ["git", "hooks", "commit", "jira", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hookmaster"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
walkdir = "2.4"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0" 