[package]
name = "hookmaster-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Some nice git hooks for your pleasure - Rust implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/hookmaster-rs"
keywords = ["git", "hooks", "commit", "jira", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hookmaster"
path = "src/main.rs"

[dependencies]
pico-args = "0.5"
regex = "1.10"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0" 